--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <input type="text" [(ngModel)]="imageSrc">
-<app-img [image]="imageSrc" [valor]="title2"></app-img>
+<app-img (loaded)="onLoaded($event)" [image]="imageSrc" [valor]="title2"></app-img>
+<app-product [product]="product" *ngFor="let product of products"></app-product>
