added timer in seconds in the img components and set onDestroyed method to stop the timer when the element is deleted

--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -3,3 +3,4 @@
 <ng-template #elseBlock>
     <img (load)="imgLoaded()" (error)="imgError()" [src]="image" alt="Imagen">
 </ng-template>
+<h3>{{counter}}</h3>
