--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <input type="text" [(ngModel)]="imageSrc">
-<app-img (loaded)="onLoaded($event)" [image]="imageSrc" [valor]="title2"></app-img>
+<app-img *ngIf="showImage==true" (loaded)="onLoaded($event)" [image]="imageSrc" [valor]="title2"></app-img>
 <app-product [product]="product" *ngFor="let product of products"></app-product>
+<button (click)="toggleImage()">Toggle Image</button>
+<p>{{showImage}}</p>
