--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,3 @@
 <img [src]="product.imageUrl" alt="">
-<h2>{{product.price}}</h2>
+<h2>{{(product.price).toFixed(2)}} $</h2>
 <p>{{product.name}}</p>
