--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<input type="text" [(ngModel)]="imageSrc">
-<app-img *ngIf="showImage==true" (loaded)="onLoaded($event)" [image]="imageSrc" [valor]="title2"></app-img>
-<app-product [product]="product" *ngFor="let product of products"></app-product>
+<!-- <input type="text" [(ngModel)]="imageSrc" />
+<app-img
+  *ngIf="showImage == true"
+    (loaded)="onLoaded($event)"
+    [image]="imageSrc"
+    [valor]="title2"
+></app-img>
 <button (click)="toggleImage()">Toggle Image</button>
-<p>{{showImage}}</p>
+<p>{{ showImage }}</p> -->
+<app-products></app-products>
