--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,4 @@
-<img [src]="product.imageUrl" alt="">
+<img  alt="">
+<app-img [src]="product.imageUrl"></app-img>
 <h2>{{(product.price).toFixed(2)}} $</h2>
 <p>{{product.name}}</p>
