nav component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
 ></app-img>
 <button (click)="toggleImage()">Toggle Image</button>
 <p>{{ showImage }}</p> -->
+<app-nav></app-nav>
 <app-products></app-products>
