--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,34 +1,49 @@
 <div class="show-mobile">
     <div>
         <button>
-            <img src="./assets/svg/icon_menu.svg" alt="menu">
+        <img
+            (click)="toggleSideMenu()"
+            src="./assets/svg/icon_menu.svg"
+            alt="menu"
+        />
         </button>
         <a href="">
-            <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
+        <img src="./assets/svg/logo_yard_sale.svg" alt="logo" />
         </a>
         <a href="">
-            <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
+        <img src="./assets/svg/icon_shopping_cart.svg" alt="logo" />
         </a>
     </div>
-</div>
-<div class="hide-mobile">
+    <div class="side-menu" [class.active]="sideMenuIsActive">
+        <button (click)="toggleSideMenu()" >
+        Close
+        </button>
+        <ul>
+        <li><a href="">All</a></li>
+        <li><a href="">Clothes</a></li>
+        <li><a href="">Electronics</a></li>
+        </ul>
+    </div>
+    </div>
+    <div class="hide-mobile">
     <div>
         <nav>
-            <a class="logo" href="">
-                <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
-            </a>
-            <ul>
-                <li><a href="">All</a></li>
-                <li><a href="">Clothes</a></li>
-                <li><a href="">Electronics</a></li>
-            </ul>
+        <a class="logo" href="">
+            <img src="./assets/svg/logo_yard_sale.svg" alt="logo" />
+        </a>
+        <ul>
+            <li><a href="">All</a></li>
+            <li><a href="">Clothes</a></li>
+            <li><a href="">Electronics</a></li>
+        </ul>
         </nav>
         <div class="info">
-            <div class="account">nicolas@nicolas.com</div>
-            <div>
+        <div class="account">nicolas@nicolas.com</div>
+        <div>
             <a href="">
-                <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
+            <img src="./assets/svg/icon_shopping_cart.svg" alt="logo" />
             </a>
+        </div>
         </div>
     </div>
 </div>
