create logic to add a product into the shopping cart

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -3,5 +3,6 @@
     <app-product
         [product]="product"
         *ngFor="let product of products"
+        (addedProduct)="onAddToShoppingCart($event)"
     ></app-product>
 </div>
