--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,3 +2,4 @@
 <app-img [src]="product.imageUrl"></app-img>
 <h2>{{(product.price).toFixed(2)}} $</h2>
 <p>{{product.name}}</p>
+<button (click)="onAddToCart()">Add Cart</button>
