--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -10,3 +10,7 @@
 <app-product [product]="productos" *ngFor="let productos of myShoppingCart"></app-product>
 <p>Cantidad de productos que he agregado {{myShoppingCart.length}}</p>
 <p>La cantidad a pagar es de {{total.toFixed(2)}} $</p>
+<p>Today: {{today | date: 'fullDate' }}</p>
+<p>
+    {{"HoLa ComO EsTaS" | uppercase }}
+</p>
