created pipe folder with timeAgo pipe

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -11,6 +11,7 @@
 <p>Cantidad de productos que he agregado {{myShoppingCart.length}}</p>
 <p>La cantidad a pagar es de {{total.toFixed(2)}} $</p>
 <p>Today: {{today | date: 'fullDate' }}</p>
+<p>{{today | timeAgo}}</p>
 <p>
     {{"HoLa ComO EsTaS" | uppercase }}
 </p>
