--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,4 +2,5 @@
 <app-img [src]="product.images[0]"></app-img>
 <h2>{{product.price | currency: 'COP ' }}</h2>
 <p>{{product.title}}</p>
+<p>{{product.title | reverse}}</p>
 <button (click)="onAddToCart()">Add Cart</button>
