--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,7 @@
 <img  alt="">
 <app-img [src]="product.images[0]"></app-img>
-<h2>{{product.price | currency: 'COP ' }}</h2>
-<p>{{product.title}}</p>
-<p>{{product.title | reverse}}</p>
+<h2>{{ product.price | currency: 'COP ' }}</h2>
+<p>{{ product.title}}</p>
+<p>{{ product.title | reverse}}</p>
+<p appHighlight>{{ product.description }}</p>
 <button (click)="onAddToCart()">Add Cart</button>
