--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,6 +1,6 @@
 <p>{{ valor }}</p>
 <!-- <p *ngIf="image=='' || image=='Agrege la url de la imagen que quiera mostrar'; else elseBlock">No se ha renderizado ninguna Imagen. Por favor para algun link</p> -->
-<p *ngIf="src == ''; else elseBlock">
+<p *ngIf="src === ''; else elseBlock">
     No se ha renderizado ninguna Imagen. Por favor para algun link
 </p>
 <ng-template #elseBlock>
