--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 <img  alt="">
-<app-img [src]="product.images[0]"></app-img>
+<app-img *ngIf="product.images.length > 0 && product.images[0]!== null" [src]="product.images[0]"></app-img>
 <h2>{{ product.price | currency: 'COP ' }}</h2>
 <p>{{ product.title}}</p>
 <p>{{ product.title | reverse}}</p>
