--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,7 +1,8 @@
 <img  alt="">
-<app-img *ngIf="product.images.length > 0 && product.images[0]!== null" [src]="product.images[0]"></app-img>
+<app-img *ngIf="product.images.length > 0 &&   product.images[0]!== null" [src]="product.images[0]"></app-img>
 <h2>{{ product.price | currency: 'COP ' }}</h2>
 <p>{{ product.title}}</p>
 <p>{{ product.title | reverse}}</p>
 <p appHighlight>{{ product.description }}</p>
+<button (click)="onShowDetail()">Ver Detalle</button>
 <button (click)="onAddToCart()">Add Cart</button>
