--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<button (click)="toggleProductDetail()">Click</button>
+<button (click)="createNewProduct()">Click</button>
 <div class="products-grid">
     <app-product
         [product]="product"
