created function deleteproduct and integrated in the page 2

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -19,6 +19,7 @@
 
         <p>{{ productChosen.description }}</p>
         <button (click)="updateProduct()">Edit information of the product</button>
+        <button (click)="deleteProduct()">Delete product</button>
     </div>
 </div>
 
