--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -18,6 +18,7 @@
         </swiper>
 
         <p>{{ productChosen.description }}</p>
+        <button (click)="updateProduct()">Edit information of the product</button>
     </div>
 </div>
 
