--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,6 +2,7 @@
 <app-img *ngIf="product.images.length > 0 &&   product.images[0]!== null" [src]="product.images[0]"></app-img>
 <h2>{{ product.price | currency: 'COP ' }}</h2>
 <p>{{ product.title}}</p>
+<p>{{ product.taxes?.toFixed(2) | currency: 'COP' }} taxes to pay</p>
 <p>{{ product.title | reverse}}</p>
 <p appHighlight>{{ product.description }}</p>
 <button (click)="onShowDetail()">Ver Detalle</button>
