--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
 <button (click)="toggleImage()">Toggle Image</button>
 <p>{{ showImage }}</p> -->
 <app-nav></app-nav>
+  <button (click)="createUser()">Create User</button>
+  <button (click)="login()">Login</button>
 <app-products></app-products>
