--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <button (click)="toggleImage()">Toggle Image</button>
 <p>{{ showImage }}</p> -->
 <app-nav></app-nav>
-  <button (click)="createUser()">Create User</button>
-  <button (click)="login()">Login</button>
+<button (click)="createUser()">Create User</button>
+<button (click)="login()">Login</button>
+<button (click)="getProfile()">Getting the Profile</button>
 <app-products></app-products>
