created logic to download files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,10 @@
 <p>{{ showImage }}</p> -->
 <app-nav></app-nav>
 <button (click)="createUser()">Create User</button>
+<p>
+  <a href="../assets/files/texto.txt" download>Descargar</a>
+</p>
+<p>
+  <button (click)="downloadPdf()">Descarga PDF</button>
+</p>
 <app-products></app-products>
