--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,10 @@
   <a href="../assets/files/texto.txt" download>Descargar</a>
 </p>
 <p>
+  <input type="file" (change)="onUpload($event)">
+  <img *ngIf="imgRta" [src]="imgRta">
+</p>
+<p>
   <button (click)="downloadPdf()">Descarga PDF</button>
 </p>
 <app-products></app-products>
